<resources>
    <string name="action_settings">Settings</string>

    <string name="app_name">ImageManagement</string>
    <string name="right_top_button">All</string>
    <string name="mark_hint">Input your mark</string>
    <string name="m2s_transition">m2s</string>
    <string name="delete">delete</string>
    <string name="share">share</string>
    <string name="main_menu_item_map">map</string>
    <string name="operations_item_tag">tag</string>
    <string name="dialog_add_tag">add new tags</string>
    <string name="main_menu_item_refresh">refresh</string>
    <string name="add_image">add image</string>
    <string name="add_image_desc">add image</string>
    <string name="delete_image_desc">delete image</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_tag_input_hint">input new tag</string>
    <string name="dialog_select_tag_title">Select Tags</string>
    <string name="operations_item_delete">delete</string>
    <string name="operations_item_move">move</string>
    <string name="operations_item_share">share</string>
    <string name="operations_item_mark">mark</string>
    <string name="operatoins_item_tag">tag</string>
    <string name="dialog_input_hint">input</string>
    <string name="nv_item_folder">Folders</string>
    <string name="nv_item_event">Events</string>
    <string name="nv_item_map">Map</string>
    <string name="toolbar_complete_actoin">complete</string>
    <string name="dialog_note_msg">NOTE : </string>
    <string name="dialog_select_folder_title">select a folder</string>
    <string name="show_image_desc">show</string>
    <string name="modify_image_desc">modify</string>
    <string name="gif">GIF</string>
    <string name="operatoins_item_more">more</string>
    <string name="operations_item_info">image info</string>
    <string name="operations_item_bg">set as wallpaper</string>
    <string name="dialog_info_title">Image Info</string>
</resources>
