<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout style="@style/dialog_outer_linear_layout">

        <TextView
            android:text="@string/dialog_select_folder_title"
            style="@style/dialog_title" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/folder_list"
            android:layout_width="match_parent"
            android:layout_height="300dp" />

        <LinearLayout style="@style/dialog_bottom_button_outer">

            <Button
                android:id="@+id/dialog_cancel"
                android:text="@string/dialog_cancel"
                style="@style/dialog_bottom_button" />

            <Button
                android:id="@+id/dialog_confirm"
                android:text="@string/dialog_confirm"
                style="@style/dialog_bottom_button" />

        </LinearLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
