<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout style="@style/dialog_outer_linear_layout">

        <TextView
            android:id="@+id/dialog_title"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/event_input"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:hint="@string/dialog_input_hint"
                style="@style/input_text" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/dialog_cancel"
                android:text="@string/dialog_cancel"
                style="@style/dialog_bottom_button" />

            <Button
                android:id="@+id/dialog_confirm"
                android:text="@string/dialog_confirm"
                style="@style/dialog_bottom_button" />

        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>