<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout style="@style/dialog_outer_linear_layout">

        <TextView
            android:text="@string/dialog_select_tag_title"
            android:gravity="center"
            android:background="#2aaa"
            android:textColor="#000"
            android:textSize="13sp"
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <LinearLayout
            android:id="@+id/dialog_input_liearlayout"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="center">

            <ImageButton
                android:id="@+id/dialog_input_close"
                android:layout_gravity="bottom"
                android:background="#0fff"
                android:src="@drawable/close"
                android:layout_width="35dp"
                android:layout_height="35dp" />


            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/dialog_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/input_text"
                    android:hint="@string/dialog_tag_input_hint" />
            </android.support.design.widget.TextInputLayout>

            <ImageButton
                android:id="@+id/dialog_input_complete"
                android:layout_gravity="bottom"
                android:background="#0fff"
                android:src="@drawable/add"
                android:layout_width="35dp"
                android:layout_height="35dp" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/tag_list"
            android:layout_width="match_parent"
            android:layout_height="160dp" />

        <Button
            android:id="@+id/dialog_add_tag"
            android:text="@string/dialog_add_tag"
            style="@style/dialog_button" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/dialog_cancel"
                android:text="@string/dialog_cancel"
                style="@style/dialog_bottom_button" />

            <Button
                android:id="@+id/dialog_confirm"
                android:text="@string/dialog_confirm"
                style="@style/dialog_bottom_button" />

        </LinearLayout>

        <TextView
            android:id="@+id/dialog_note"
            android:textColor="@color/colorAccent"
            android:gravity="center"
            android:paddingTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
