<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_margin="10dp"

    app:cardElevation="2dp"
    app:cardCornerRadius="5dp"
    app:contentPadding="10dp"

    android:focusable="true"
    android:clickable="true"
    android:foreground="?attr/selectableItemBackgroundBorderless">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="25dp">

            <TextView
                android:id="@+id/event_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="#000"
                android:textSize="16sp"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/event_modify_name" />

            <ImageButton
                android:id="@+id/event_show_list"
                android:src="@drawable/event_show_list"
                android:layout_toStartOf="@+id/event_modify_name"
                style="@style/event_operation_item"
                android:contentDescription="@string/show_image_desc" />

            <ImageButton
                android:id="@+id/event_modify_name"
                android:src="@drawable/ic_pencil"
                style="@style/event_operation_item"
                android:layout_toStartOf="@+id/event_delete"
                android:contentDescription="@string/modify_image_desc" />

            <ImageButton
                android:id="@+id/event_delete"
                android:src="@drawable/delete"
                style="@style/event_operation_item"
                android:layout_toStartOf="@+id/event_add_image"
                android:contentDescription="@string/delete_image_desc" />

            <ImageButton
                android:id="@+id/event_add_image"
                style="@style/event_operation_item"
                android:layout_marginEnd="0dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/add_image_desc"
                android:src="@drawable/add" />

        </RelativeLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/event_outer_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="10dp" />
    </LinearLayout>

</android.support.v7.widget.CardView>
