<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:paddingStart="10dp"
    android:paddingEnd="10dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/dialog_select_tag_title"
            android:gravity="center"
            android:background="#2aaa"
            android:textColor="#000"
            android:textSize="13sp"
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <LinearLayout
            android:id="@+id/dialog_input_liearlayout"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="center">

            <ImageButton
                android:id="@+id/dialog_input_close"
                android:layout_gravity="bottom"
                android:background="#0fff"
                android:src="@drawable/close"
                android:layout_width="35dp"
                android:layout_height="35dp" />


            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/dialog_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLines="1"
                    android:textSize="17sp"
                    android:layout_weight="1"
                    android:hint="@string/dialog_input_hint"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <ImageButton
                android:id="@+id/dialog_input_complete"
                android:layout_gravity="bottom"
                android:background="#0fff"
                android:src="@drawable/add"
                android:layout_width="35dp"
                android:layout_height="35dp" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/tag_list"
            android:layout_width="match_parent"
            android:layout_height="300dp" />

        <Button
            android:background="@drawable/dialog_add_button_shape"
            android:id="@+id/dialog_add_tag"
            android:text="@string/dialog_add_tag"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:background="@drawable/dialog_cancel_button_shape"
                android:id="@+id/dialog_cancel"
                android:text="@string/dialog_cancel"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground" />

            <Button
                android:background="@drawable/dialog_cancel_button_shape"
                android:id="@+id/dialog_confirm"
                android:text="@string/dialog_confirm"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground" />
        </LinearLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
